--- a/ShopmeProject/ShopmeWebParent/SpringAngularJSpoc/src/main/resources/public/index.html
+++ b/ShopmeProject/ShopmeWebParent/SpringAngularJSpoc/src/main/resources/public/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Shopme Admin Control Panel</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/webjars/bootstrap/4.0.0/css/bootstrap.min.css"
-    />
-    <script
-      type="text/javacript"
-      src="/webjars/angularjs/1.7.9/angular.min.js"
-    ></script>
-    <script
-      type="text/javacript"
-      src="/webjars/bootstrap/4.0.0/css/bootstrap.min.js"
-    ></script>
-  </head>
-  <body>
-    <h1>Welcome to Shopme Admin Control Panel</h1>
-  </body>
+<head>
+<meta charset="UTF-8" />
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<title>Shopme Admin Control Panel</title>
+<meta name="description" content="" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" type="text/css"
+	href="/webjars/bootstrap/4.0.0/css/bootstrap.min.css" />
+<script type="text/javacript"
+	src="/webjars/angularjs/1.7.9/angular.min.js"></script>
+<script type="text/javacript"
+	src="/webjars/bootstrap/4.0.0/css/bootstrap.min.js"></script>
+</head>
+<body>
+	<h1>Welcome to Shopme Admin Control Panel</h1>
+</body>
 </html>
