--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/static/index.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html ng-app="userregistrationsystem">
+<html ng-app="eNamApp">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -29,9 +29,9 @@
     <!-- NAVIGATION COLLAPSIBLE BAR -->
     <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
       <div class="container-fluid">
-        <img src="assets/shopme.png" height="60px" width="60px" />
+        <img src="assets/shopme.png" alt= "ShopMe" class="img-responsive" />
 
-        <a class="navbar-brand" href="#!">ShopMe</a>
+       <!--  <a class="navbar-brand" href="#!">ShopMe</a> -->
 
         <button
           class="navbar-toggler"
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/users">Users</a>
+              <a class="nav-link" href="#!users">Users</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/categories">Categories</a>
